funcion nueva en APIPet para obtener mascotas (en adopcion) de cierta categoria
